# cloud-ai-bank-onboarding

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md
backend/: README.md  pyproject.toml
backend/database/: metadata.json  vector_store.faiss
backend/notebooks/: run_agent_flow.ipynb  run_data_ingestion.ipynb
backend/src/: main.py
backend/src/app/: agent.py  customer_api.py  data_ingestion.py  helpers.py  mock_data.json  prompts.py  registry_api.py  tools.py
docs/appendices/: .gitkeep
frontend/: README.md  index.html  package.json
frontend/src/: App.jsx
iac/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
